kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: obljubadeladolg-deployment
  labels:
    app: obljubadeladolg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: obljubadeladolg
  template:
    metadata:
      labels:
        app: obljubadeladolg
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
        - name: obljubadeladolg-storage
          emptyDir: {}
      containers:
        - name: obljubadeladolg
          image: obljubadeladolg
          volumeMounts:
            - name: obljubadeladolg-storage
              mountPath: /vc
          command:
            - gunicorn
            - obljubadeladolg.wsgi:application
            - -b
            - 0.0.0.0:8000
            - --log-level
            - DEBUG
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: 400Mi
              cpu: 200m
            limits:
              memory: 400Mi
              cpu: 400m
        - name: obljubadeladolg-nginx
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          image: nginx:alpine
          volumeMounts:
            - name: obljubadeladolg-storage
              mountPath: /usr/share/nginx/html
          resources:
            requests:
              memory: 50Mi
              cpu: 50m
            limits:
              memory: 200Mi
              cpu: 100m
