kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: obljubadeladolg-staging
spec:
  selector:
    app: obljubadeladolg-staging
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: obljubadeladolg-staging-nginx
spec:
  selector:
    app: obljubadeladolg-staging-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
