kustomize/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: enable-cors
spec:
  headers:
    accessControlAllowOriginList:
      - "https://obljubadeladolg.danesjenovdan.si"
      - "https://obljubadeladolg.djnd.si"
    accessControlAllowMethods:
      - GET
      - POST
      - PUT
      - DELETE
      - OPTIONS
    accessControlAllowHeaders:
      - "*"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: obljubadeladolg
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: |
      traefik-redirect-to-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - obljubadeladolg.danesjenovdan.si
        - obljubadeladolg.djnd.si
      secretName: obljubadeladolg-tls
  rules:
    - host: obljubadeladolg.danesjenovdan.si
      http: &http_paths
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: obljubadeladolg
                port:
                  number: 8000
    - host: obljubadeladolg.djnd.si
      http: *http_paths
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: obljubadeladolg-nginx
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: |
      obljubadeladolg-enable-cors@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - files.obljubadeladolg.djnd.si
      secretName: obljubadeladolg-nginx-tls
  rules:
    - host: files.obljubadeladolg.djnd.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: obljubadeladolg-nginx
                port:
                  number: 80
